--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <div class="emoj">
     <span>
-    Hi, I'm Daryna 👋🇺🇦 I am a postdoctoral research at <a href="https://www.soc.cit.tum.de/">Social Computing Research Group</a> in  
+    Hi, I'm Daryna 👋🇺🇦 I am a postdoctoral researcher at <a href="https://www.soc.cit.tum.de/">Social Computing Research Group</a> in  
     </span>
     <img src="./images/tum_logo.png" width="20px">
     <span>Technical University of Munich🇩🇪. 
@@ -185,7 +185,7 @@ Now, I am one of the admins at <a href="https://huggingface.co/tum-nlp" target="
   <li>	  
   <span class="emoj"><img src="./images/tum_logo.png" width="25px"></span>
   <strong>TUM</strong><br>
-  Postdoctora Researcher<br>
+  Postdoctoral Researcher<br>
   Jun 2022 - present<br>
   Project: <i>IFAN: An Explainability-Focused Interaction Framework for Humans and NLP Models</i><br>
   <span class="authors">Toolkit: BLOOM, T5, BERT, SHAP, LIME, human annotation design and analysis.<br>
