--- a/index.html
+++ b/index.html
@@ -224,6 +224,11 @@ Now, I am one of the admins at <a href="https://huggingface.co/tum-nlp" target="
 <h2>Talks</h2>
 
 <ul>
+  <li>Methods for Text Style Transfer: Text Detoxification Case
+    <br><div class="authors">Berlin, Apr 2023 <span class="authors"><a href="https://youtu.be/8I5tZvcmIis">video</a></span></div>
+  </li>
+  <br>
+
   <li>NLP for Social Good: Methods for Fighting Harmful Multilingual Textual Content
     <br><div class="authors">MunichNLP, Oct 2022 <span class="authors"><a href="https://youtu.be/B-LBo-w4CrA">video</a></span></div>
   </li>
@@ -268,10 +273,10 @@ Before, I had an amazing opportunity to participate in <strong>Statistical NLP</
 	  
 <p><strong>Theses under my supervision</strong>:</p>
 <ul>
-	<li>Adam Rydelek (Masters, TUM) "<i>Sexism in Social Media -- Explainable Detection Using Deep Learning Models</i>" (ongoing)</li>
-	<li>Daniel Schroter (Masters, TUM) "<i>Discovering Human Values Behind Arguments -- A Case for Transfomer-based Models and Explainable AI</i>" (ongoing)</li>
+	<li>Adam Rydelek (Masters, TUM) "<i>Sexism in Social Media -- Explainable Detection Using Deep Learning Models</i>" (<a href="https://arxiv.org/abs/2305.08636">paper</a>)</li>
+	<li>Daniel Schroter (Masters, TUM) "<i>Discovering Human Values Behind Arguments -- A Case for Transfomer-based Models and Explainable AI</i>" (<a href="https://arxiv.org/abs/2305.08625">paper</a>)</li>
 	<li>Yen-Yu Chang (Masters, TUM) "<i>Exploration of Approaches to Counter Hate Speech: The Case of Sexist Speech</i>" (ongoing)</li>
-	<li>Yuliana Poliakova (Bachelor, TUM) "<i>Detecting the Persuasion Techniques in Online News</i>" (ongoing)</li>
+	<li>Yuliana Poliakova (Bachelor, TUM) "<i>Detecting the Persuasion Techniques in Online News</i>" (finished May, 2023)</li>
 	<li>Daniil Moskovsky (Masters, 2022, Skoltech) "<i>Supervised Text Detoxification Methods</i>" (<a href="https://aclanthology.org/2022.acl-srw.26/">paper</a>)</li>
 	<li>Mikhail Kuimov (Masters, 2022, Skoltech) "<i>Multilingual and Cross-lingual Approaches to Processing of News Texts</i>" (<a href="https://aclanthology.org/2022.semeval-1.160/">paper</a>)</li>
 </ul>
