--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ Some of my works:
         <div class="authors"> <strong>D Dementieva</strong>, M Kuimov, A Panchenko
         </div>
         <div class="submission_info">
-          Accepted to MDPI, 2023
+          MDPI, 2023
         </div>
         <div class="authors">
-          <a href="https://arxiv.org/abs/2211.14279">Paper</a>&emsp;
+          <a href="https://www.mdpi.com/2313-433X/9/4/77">Paper</a>&emsp;
         </div>
       </div>
 </div>
